<resources>
    <string name="app_name">Friends Finder</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome</string>
    <string name="slide_1_desc">This is the easiest way to find your friends!</string>
    <string name="slide_2_title">Send Friend Request</string>
    <string name="slide_2_desc">Send friend request to your family and friends!</string>
    <string name="slide_3_title">Track Friends Location</string>
    <string name="slide_3_desc">Best way to find your friends current location!</string>
    <string name="slide_4_title">Get Possible Route</string>
    <string name="slide_4_desc">Best way to communicate with friends according to his current location!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="send_request">Send Request</string>
    <string name="result">Search</string>
    <string name="accept">Accept</string>
    <string name="policy1">The Amtee Apps has a prosperous tradition of bringing great characters and experiences to our guests around the world, and our sites and applications are created to entertain and connect guests with the best that Amtee Apps has to offer on the platforms and devices they prefer. We believe that your privacy is very important and on top priority to us. </string>
    <string name="policy2">1.1 Personal Information such as your full name, physical address, email address, telephone number, photograph, location, user names and in some cases credit card information (credit card information : only if you buy our paid app).</string>
    <string name="policy3">1.2 Non-personal "Usage Data" which is anonymous data about your use of the Websites/Apps that is tied to your computer and/or device through which you use the Websites/Apps.</string>
    <string name="policy4">Personal information usage and collection:</string>
    <string name="policy5">â€¢ If you choose to open an account with us, we may collect your name, email address, physical address, and/or phone number.</string>
    <string name="policy6">â€¢ If you choose to connect to one of our Websites/Apps through a third-party social network such as Facebook or Game Center, we may collect Personal Information from your profile on such third-party social networks, such as your name, username, and photograph.</string>
    <string name="policy7">â€¢ If you choose to make a purchase through our Websites/Apps, we will collect your credit card information and other billing information.</string>
    <string name="policy8">â€¢ If you choose to make use of any public forum, comment section, or chat function, we may collect any Personal Information you may disclose through such means.</string>
    <string name="policy9">â€¢ If you choose to send a message to another user or defined group of users through our message, chat, post or other in-game function, we may collect any Personal Information you may disclose through such means, as well as the necessary Personal Information of the user(s) you are contacting, in order to facilitate the communication (Note: we will never collect any information sent outside of the functionality of our Websites/Apps, including through emails or text messages).</string>
    <string name="policy10">â€¢ If you choose to enable push notifications, we may use your Personal Information, or non-personal information such as a device ID, in order to send push notifications to your device.</string>
    <string name="policy11">â€¢ If you choose to submit your Personal Information to us for any other reason in any other form, we will collect such Personal Information and use it for the purposes for which you submitted it.</string>
    <string name="policy12">â€¢ We may collect the following Usage Data when you make use of the Websites/Apps: your computer\'s IP address, your mobile phone\'s unique device ID or other persistent identifiers, geolocation information, your device\'s software platform and firmware, the type of browser you use, the date and time of your use of our Websites/Apps, the actions you take within the Websites/Apps, your game progress, play time, score and achievements, and the URLs you visited and/or apps you used before and after using our Websites/Apps.</string>
    <string name="policy13">We will not collect any Personal Information from you simply by virtue of your visiting our Website; we only collect it if you choose to submit it to us. You represent and warrant that all Personal Information you provide us is true and correct and relates to you and not to any other person.</string>
    <string name="policy14">2. Credit Card Transactions</string>
    <string name="policy15">If you choose to purchase a product from our Websites/Apps, you represent and warrant that all credit card information you provide will be accurate and correct and that you are authorized to use such credit card. In no event will you provide us with any false or fraudulent information. . You can decline to permit cookies in your browser, but in that case we cannot promise you that all Website/App features will function properly as a result. If you use the Websites/Apps, you are responsible for maintaining the confidentiality of your account and for restricting access to your computer or device, and you agree to accept responsibility for all activities that occur under your account. Our Websites/Apps may link to external sites beyond our control. This privacy policy covers only the way we treat the Personal Information and Usage Data we collect on our Websites/Apps. By accessing any external sites, you are agreeing to the privacy policies of those sites. Please understand that the external sites may have different policies with respect to the collection, use and disclosure of your Personal Information. We have no control over and are not responsible for the privacy practices of such third parties. Therefore, you are encouraged to review the privacy policies of all third-party Websites/Apps. Without limiting anything in the following section, we are not liable in any way for the actions, inactions or policies of any external Websites/Apps.</string>
    <string name="policy16">3. Data and Personal Information That We Collect</string>
    <string name="policy17">3.1 Disclosure:</string>
    <string name="policy18">We will not sell, rent or transfer your Personal Information to third parties, except as otherwise indicated herein. We will not store your credit card information. In order to process credit card payments, we will use the service of a secure, third-party credit card processor. We use the services of third parties who will have limited access to your Personal Information to be used for specific purposes. In addition, Usage Data in aggregated, anonymous form may be shared with third parties who assist us with our internal operations such as administration, analytics, research, and optimization. We may disclose your Personal Information or other information collected if required by law or court order, if the information relates to actual or threatened harmful conduct, to investigate and/or take action against illegal activity, suspected abuse or unauthorized use of the Websites/Apps, or to protect the property or safety of others.</string>
    <string name="policy19">3.2 Use:</string>
    <string name="policy20">We will use your Personal Information to provide you with any goods, services, or functionality you have requested or respond to any inquiries you have made. We may also use your Personal Information in order to contact you to promote our Websites/Apps, contests and any specials we may offer. In the event that we send you advertising or marketing materials, we will provide you with the opportunity to opt-out of receiving such materials in the future. You may also opt-out of receiving such materials at any time in accordance with the instructions provided in this Privacy Policy. Usage Data may be used by us for administrative, analytical, research, optimization, security and other purposes. Specifically, we may use your Usage Data to help us learn more about your gaming activities, personalize your content, compile statistics, respond to customer service inquiries, provide security and to otherwise enhance your gaming experience. Usage Data may also be used to help us provide you advertising that better suits your interests. Geolocation information will be used to determine the jurisdiction in which you are located so we can determine what set of laws apply to you. Your device ID may be used so we can send you push notifications (if you choose to allow that function) and track your use of our Websites/Apps so that we can better understand your preferences and tendencies which will help us best personalize your experience and provide you with in-game offers and notifications that are tailored to you.</string>
    <string name="policy21">While the Websites/Apps may be visited and/or played by children, we do not knowingly collect or use any Personal Information from children under the age of 13 and hereby specifically prohibit any user under the age of 13 from providing us with any Personal Information. If you are a parent of a child under 13 years of age and you believe your child has provided us with Personal Information.</string>
    <string name="policy22">We may collect a device ID or other persistent identifier linked to the device or computer that may be used by a child to play our Websites/Apps. The data collected will be anonymous and not tied to any Personal Information. In addition, this data will be used solely for internal purposes such as personalization of content, security, and contextual (not behavioral) advertising. Certain of our Websites/Apps may permit in-game purchases, even if the applicable game was free to download. Such purchases do not always require the re-entry of credit card information because they may be made through an existing third-party account (such as an iTunes account). If you are a parent who is concerned about this feature, you may disable the ability to make in-game purchases by selecting the Settings tab for the applicable Website/App, and following the necessary prompts to prohibit such purchases. If you are between the age of 13 and 18, please obtain your parents\' permission prior to registering with our Platform or providing us with any Personal Information. We reserve the right to change this Privacy Policy at any time. In the event we make material changes to this Privacy Policy, such policy will be re-posted in the "Privacy" section of our Websites/Apps with the date such modifications were made indicated on the top of the page. Therefore, please review this Privacy Policy from time to time so that you are aware when any changes are made to this Privacy Policy. Your continued use of the Websites/Apps after such change constitutes your acceptance of any such change(s), and if you do not accept any changes, you may choose not to use the Websites/Apps or opt out by sending us an appropriate notice. Websites/Apps Security In the event you choose to establish an account with us, you should not share your login information with anyone.</string>
</resources>